--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,7 +7,7 @@
         {
             "type": "node",
             "request": "launch",
-            "name": "启动程序",
+            "name": "node",
             "program": "${workspaceFolder}/App.js",
             "cwd": "${workspaceFolder}"
         }
