--- a/manifestDef.json
+++ b/manifestDef.json
@@ -1,1 +1,27 @@
-{"mvc.Hello":["publica:aa.tK","privateb:HelloView","protectedc:HelloView"],"mvc.HelloView1":["view:HelloView","view1:tt.KK","view2:mvcInner.Innter"],"mvc.mvcInner.Innter":["view:HelloView1","self:Innter"],"World":["view:HelloView","view1:HelloView","view2:HelloView"],"tt.KK":["view:HelloView"],"aa.tK":["view:HelloView"]}
+{
+    "mvc.Hello": [
+        "publica:aa.tK",
+        "privateb:HelloView",
+        "protectedc:HelloView"
+    ],
+    "mvc.HelloView1": [
+        "view:HelloView",
+        "view1:tt.KK",
+        "view2:mvcInner.Innter"
+    ],
+    "mvc.mvcInner.Innter": [
+        "view:HelloView1",
+        "self:Innter"
+    ],
+    "World": [
+        "view:HelloView",
+        "view1:HelloView",
+        "view2:HelloView"
+    ],
+    "tt.KK": [
+        "view:HelloView"
+    ],
+    "aa.tK": [
+        "view:HelloView"
+    ]
+}
